# Lagrange.Cpp

./: .gitignore  CMakeLists.txt  README.md
Lagrange.Core/: CMakeLists.txt  Core.cpp
Lagrange.Core/include/: Test.h
Lagrange.OneBot/: CMakeLists.txt  main.cpp
Lagrange.OneBot/include/: Common.h  Requests.h  Util.h
Lagrange.OneBot/include/System/: Command.h  Config.h  Requests.h  Util.h
Lagrange.OneBot/src/: Main.cpp  Requests.cpp  Util.cpp
Lagrange.OneBot/src/System/: Command.cpp  Config.cpp  FileReader.cpp  Requests.cpp  Util.cpp
Largange.Common/assets/: AppInfo.Json  Lagrange.OneBot.exe.manifest
Largange.Common/include/: SimpleSocket.h
Largange.Common/src/: SimpleSocket.cpp
develop/: README.md
develop/docs/: Readme.md
